--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title class="page-title">microblog</title>
-    <link rel="stylesheet" href="/static/css/style.css"/>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body class="body">
     <header class="navbar">
@@ -89,4 +89,5 @@
 </script>
 
 </body>
+
 </html>
